@@ -123,6 +123,7 @@ Version 2.2.4 - The "don't know yet if there will be another 2.2" version.
 			  routing table.
 		* Implemented non-interactive mode for amulecmd/amuleweb.
 		* Fixed detection of crypto++ library for versions >= 5.6.0.
+		* Fixed saving wrong window position when exiting while minimized.
 
 	iz0bbz:
 		* Fixed static linking with GeoIP on MinGW/MSYS.
